manifests/kube-system/traefik/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: traefik
  name: traefik
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - name: http
      port: 8080
      targetPort: admin
