manifests/kube-system/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: cloudflare
spec:
  tls:
  - hosts:
      - traefik.homelab.dsb.dev
    secretName: traefik-tls
  rules:
  - host: traefik.homelab.dsb.dev
    http:
      paths:
      - backend:
          service:
            name: traefik
            port:
              number: 8080
        path: /
        pathType: Prefix
